--- a/index.html
+++ b/index.html
@@ -130,257 +130,52 @@
       button:hover {
         background-color: #cc3c3c;
       }
+
+      #landingPage {
+        text-align: center;
+        color: white;
+        max-width: 420px;
+        margin: auto;
+        padding: 20px;
+        display: block;
+      }
+
+      #startButton {
+        margin-top: 20px;
+        padding: 12px 24px;
+        font-size: 16px;
+        font-weight: bold;
+        background-color: #e84545;
+        color: white;
+        border: none;
+        border-radius: 8px;
+        cursor: pointer;
+      }
+
+      #startButton:hover {
+        background-color: #cc3c3c;
+      }
+
+      #formCard {
+        display: none;
+      }
     </style>
   </head>
   <body>
-    <div class="card">
-      <div class="logo-container">
-        <img src="data:image/jpeg;base64,...(base64 image here)..." alt="MV Digital Tools Logo">
-      </div>
-      <h2>📝 Subscription Request</h2>
-      <p>Fill the form to subscribe. You'll receive payment instructions via email.</p>
+    <div id="landingPage">
+      <h2>👋 Welcome to MV Digital Tools</h2>
+      <p>Helping students stay under the radar since 2023 🚀</p>
+      <button id="startButton">Let's Get Started</button>
+    </div>
 
-      <form id="customerForm">
-        <label>👤 Full Name</label>
-        <input type="text" name="name" required>
-
-        <label>📞 Contact Number</label>
-        <input type="tel" name="contact" required>
-
-        <label>📧 Email Address</label>
-        <input type="email" name="email" required>
-
-        <label>🛠️ Request Type</label>
-        <select name="requestType" required>
-          <option value="new">New Subscription</option>
-          <option value="renew">Renew Existing</option>
-        </select>
-
-        <label>🧩 Service</label>
-        <select name="service" id="service" required>
-          <option value="ChatGPT">ChatGPT Pro</option>
-          <option value="Microsoft 365">Microsoft 365</option>
-          <option value="Canva Pro">Canva Pro</option>
-          <option value="Duolingo">Duolingo</option>
-          <option value="Assignment Check">Assignment Check</option>
-          <option value="Perplexity">Perplexity Pro</option>
-          <option value="Amazon Prime Video">Amazon Prime Video</option>
-          <option value="Adobe Creative Cloud">Adobe Creative Cloud</option>
-        </select>
-
-        <div id="perkDisplay" style="font-size: 0.9em; color: #333; margin-bottom: 15px;">
-          <strong>What do you get:</strong>
-        </div>
-
-        <label>⏳ Duration</label>
-        <select name="duration" id="duration" required></select>
-
-        <div id="qtyRow">
-          <label>📝 No. of Assignments</label>
-          <input type="number" id="qty" name="qty" min="1">
-        </div>
-
-        <label>🗒️ Notes / Ref</label>
-        <textarea name="notes" rows="3" placeholder="Optional..."></textarea>
-
-        <input type="hidden" id="price" name="amount" required>
-
-        <div class="price-summary sticky" id="priceDisplay">
-          🛒 Total Price
-          <span>MVR 0 ($0.00)</span>
-        </div>
-
-        <button type="submit">Submit</button>
-      </form>
+    <div class="card" id="formCard">
+      <!-- Existing form content will go here -->
     </div>
 
     <script>
-      const priceMap = {
-        "ChatGPT": { "1 Month": 100, "6 Months": 600, "1 Year": 1200 },
-        "Microsoft 365": { "1 Year": 500 },
-        "Canva Pro": { "1 Year": 150 },
-        "Duolingo": { "1 Year": 150 },
-        "Assignment Check": {
-          "Basic AI Detection": 50,
-          "AI Bypass": 100,
-          "AI Bypass Plus": 300
-        },
-        "Perplexity": { "1 Year": 200 },
-        "Amazon Prime Video": { "1 Year": 999 },
-        "Adobe Creative Cloud": { "1 Month": 450 }
-      };
-
-      const durationOptions = {
-        "ChatGPT": ["1 Month", "6 Months", "1 Year"],
-        "Microsoft 365": ["1 Year"],
-        "Canva Pro": ["1 Year"],
-        "Duolingo": ["1 Year"],
-        "Assignment Check": ["Basic AI Detection", "AI Bypass", "AI Bypass Plus"],
-        "Perplexity": ["1 Year"],
-        "Amazon Prime Video": ["1 Year"],
-        "Adobe Creative Cloud": ["1 Month"]
-      };
-
-      const perksMap = {
-        "ChatGPT Pro": [
-          "Priority access to GPT-4",
-          "Faster response times",
-          "Improved performance during peak hours"
-        ],
-        "Microsoft 365": [
-          "Full access to Word, Excel, PowerPoint",
-          "1TB OneDrive cloud storage",
-          "Outlook email & calendar",
-          "Install on up to 5 devices"
-        ],
-        "Canva Pro": [
-          "Unlimited premium templates & elements",
-          "Magic Resize and Background Remover",
-          "Brand Kit and content planner",
-          "Team collaboration features"
-        ],
-        "Duolingo": [
-          "No ads",
-          "Unlimited hearts (mistakes)",
-          "Personalized practice",
-          "Mastery quizzes and offline access"
-        ],
-        "Adobe Creative Cloud": [
-          "Photoshop, Illustrator, Premiere Pro & more",
-          "100GB cloud storage",
-          "Fonts, stock assets, and portfolio tools",
-          "Cross-device app sync"
-        ],
-        "Amazon Prime Video": [
-          "Unlimited streaming of movies and series",
-          "Exclusive Prime Originals",
-          "Watch on multiple devices",
-          "Offline downloads"
-        ],
-        "Perplexity Pro": [
-          "Faster and more accurate answers",
-          "Expanded answer formatting",
-          "Sources and citations in context",
-          "No daily usage limits"
-        ],
-        "Assignment Check": [
-          "Basic AI Detection - Basic detection on all major AI Detectors including Turnitin + MVR 15 per extra run",
-          "AI Bypass - Changes for 0% detection + MVR 25 per correction/run",
-          "AI Bypass Plus - All features + unlimited submissions"
-        ]
-      };
-
-      const serviceEl = document.getElementById('service');
-      const durationEl = document.getElementById('duration');
-      const priceInput = document.getElementById('price');
-      const priceDisplay = document.getElementById('priceDisplay').querySelector('span');
-      const qtyRow = document.getElementById('qtyRow');
-      const qtyInput = document.getElementById('qty');
-
-      function updateDurationOptions() {
-        const service = serviceEl.value;
-        const durations = durationOptions[service] || [];
-        durationEl.innerHTML = "";
-        durations.forEach(d => {
-          const opt = document.createElement("option");
-          opt.value = d;
-          opt.textContent = d;
-          durationEl.appendChild(opt);
-        });
-        updatePrice();
-        handleQtyVisibility();
-      }
-
-      function updatePerks() {
-        const service = serviceEl.value;
-        const renamed = service === "ChatGPT" ? "ChatGPT Pro" :
-                        service === "Perplexity" ? "Perplexity Pro" : service;
-        const perks = perksMap[renamed] || [];
-        const container = document.getElementById('perkDisplay');
-        container.innerHTML = "<strong>What do you get:</strong>";
-        if (perks.length > 0) {
-          const ul = document.createElement("ul");
-          ul.style.margin = "10px 0 20px";
-          ul.style.paddingLeft = "20px";
-          perks.forEach(p => {
-            const li = document.createElement("li");
-            li.textContent = p;
-            ul.appendChild(li);
-          });
-          container.appendChild(ul);
-        }
-      }
-
-      function updatePrice() {
-        const service = serviceEl.value;
-        const duration = durationEl.value;
-        let price;
-
-        if (service === "Assignment Check" && duration === "Basic AI Detection") {
-          const qty = parseInt(qtyInput.value || "1");
-          price = 50 + 15 * (qty - 1);
-        } else if (service === "Assignment Check" && duration === "AI Bypass") {
-          const qty = parseInt(qtyInput.value || "1");
-          price = 100 + 25 * (qty - 1);
-        } else if (service === "Assignment Check" && duration === "AI Bypass Plus") {
-          price = 300;
-        } else {
-          price = priceMap[service]?.[duration];
-        }
-
-        if (price !== undefined) {
-          const usd = (price / 15.42).toFixed(2);
-          priceInput.value = `MVR ${price}`;
-          priceDisplay.textContent = `MVR ${price} ($${usd})`;
-        } else {
-          priceInput.value = "";
-          priceDisplay.textContent = "Unavailable";
-        }
-      }
-
-      function handleQtyVisibility() {
-        const service = serviceEl.value;
-        const duration = durationEl.value;
-        if (service === "Assignment Check" && duration !== "AI Bypass Plus") {
-          qtyRow.style.display = "block";
-        } else {
-          qtyRow.style.display = "none";
-          qtyInput.value = "";
-        }
-      }
-
-      serviceEl.onchange = () => {
-        updateDurationOptions();
-        handleQtyVisibility();
-        updatePrice();
-        updatePerks();
-      };
-
-      durationEl.onchange = () => {
-        handleQtyVisibility();
-        updatePrice();
-      };
-
-      qtyInput.oninput = updatePrice;
-      window.onload = () => {
-        updateDurationOptions();
-        updatePerks();
-      };
-
-      const form = document.getElementById('customerForm');
-      form.onsubmit = function(e) {
-        e.preventDefault();
-        const data = Object.fromEntries(new FormData(form).entries());
-        google.script.run.addCustomer(data);
-        alert(
-          "✅ Your request has been submitted.\n\n" +
-          "💳 Please transfer the payment to:\n" +
-          "🏦 BML: 7704519614002\n👤 Usaid Abdul Sattar\n\n" +
-          "📨 Send the transfer slip to: Viber 7566658"
-        );
-        form.reset();
-        updateDurationOptions();
-        updatePerks();
+      document.getElementById('startButton').onclick = () => {
+        document.getElementById('landingPage').style.display = 'none';
+        document.getElementById('formCard').style.display = 'block';
       };
     </script>
   </body>
