--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         padding: 20px;
         display: flex;
         justify-content: center;
+        align-items: start;
+        min-height: 100vh;
+        flex-direction: column;
       }
 
       @media (max-width: 480px) {
@@ -42,93 +45,13 @@
         max-width: 420px;
         box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
         animation: fadeIn 0.5s ease;
+        margin: auto;
+        display: none;
       }
 
       @keyframes fadeIn {
         from { opacity: 0; transform: translateY(10px); }
         to { opacity: 1; transform: translateY(0); }
-      }
-
-      .logo-container {
-        text-align: center;
-        margin-bottom: 20px;
-      }
-
-      .logo-container img {
-        width: 120px;
-        border-radius: 12px;
-      }
-
-      h2 {
-        margin-top: 0;
-        font-size: 1.7em;
-        text-align: center;
-        color: #0d1a26;
-      }
-
-      p {
-        font-size: 0.95em;
-        text-align: center;
-        margin-bottom: 25px;
-      }
-
-      label {
-        font-weight: 600;
-        font-size: 0.85em;
-        display: block;
-        margin: 10px 0 4px;
-      }
-
-      input, select, textarea {
-        width: 100%;
-        padding: 10px 12px;
-        font-size: 14px;
-        border: 1px solid #ccc;
-        border-radius: 8px;
-        margin-bottom: 15px;
-        box-sizing: border-box;
-      }
-
-      #qtyRow {
-        display: none;
-      }
-
-      #perkDisplay ul li {
-        margin-bottom: 8px;
-      }
-
-      .price-summary {
-        background-color: #0d1a26;
-        color: white;
-        border-radius: 10px;
-        padding: 16px;
-        margin: 20px 0;
-        text-align: center;
-        font-weight: bold;
-        font-size: 18px;
-      }
-
-      .price-summary span {
-        display: block;
-        font-size: 26px;
-        margin-top: 5px;
-        font-weight: 700;
-      }
-
-      button {
-        background-color: #e84545;
-        border: none;
-        border-radius: 8px;
-        width: 100%;
-        padding: 12px;
-        font-size: 16px;
-        font-weight: bold;
-        color: white;
-        cursor: pointer;
-      }
-
-      button:hover {
-        background-color: #cc3c3c;
       }
 
       #landingPage {
@@ -137,7 +60,6 @@
         max-width: 420px;
         margin: auto;
         padding: 20px;
-        display: block;
       }
 
       #startButton {
@@ -155,10 +77,6 @@
       #startButton:hover {
         background-color: #cc3c3c;
       }
-
-      #formCard {
-        display: none;
-      }
     </style>
   </head>
   <body>
@@ -169,13 +87,75 @@
     </div>
 
     <div class="card" id="formCard">
-      <iframe src="https://script.google.com/macros/s/AKfycbxCrSLSIC6aPjiXitNlKfDEg5K8FfIAqnM0T-zJM3Yw-sS_S1-nYG1dVsE3Ef9OyUQ_4g/exec" frameborder="0" style="width:100%; height:1500px; border:none; overflow:hidden;"></iframe>
+      <!-- Full embedded form HTML should be placed here (not an iframe) -->
+      <h2>📝 Subscription Request</h2>
+      <p>Fill the form to subscribe. You'll receive payment instructions via email.</p>
+
+      <form id="customerForm">
+        <label>👤 Full Name</label>
+        <input type="text" name="name" required>
+
+        <label>📞 Contact Number</label>
+        <input type="tel" name="contact" required>
+
+        <label>📧 Email Address</label>
+        <input type="email" name="email" required>
+
+        <label>🛠️ Request Type</label>
+        <select name="requestType" required>
+          <option value="new">New Subscription</option>
+          <option value="renew">Renew Existing</option>
+        </select>
+
+        <label>🧩 Service</label>
+        <select name="service" id="service" required>
+          <option value="ChatGPT">ChatGPT Pro</option>
+          <option value="Microsoft 365">Microsoft 365</option>
+          <option value="Canva Pro">Canva Pro</option>
+          <option value="Duolingo">Duolingo</option>
+          <option value="Assignment Check">Assignment Check</option>
+          <option value="Perplexity">Perplexity Pro</option>
+          <option value="Amazon Prime Video">Amazon Prime Video</option>
+          <option value="Adobe Creative Cloud">Adobe Creative Cloud</option>
+        </select>
+
+        <label>⏳ Duration</label>
+        <select name="duration" required>
+          <option>1 Month</option>
+          <option>6 Months</option>
+          <option>1 Year</option>
+        </select>
+
+        <label>🗒️ Notes / Ref</label>
+        <textarea name="notes" rows="3" placeholder="Optional..."></textarea>
+
+        <button type="submit">Submit</button>
+      </form>
     </div>
 
     <script>
       document.getElementById('startButton').onclick = () => {
         document.getElementById('landingPage').style.display = 'none';
         document.getElementById('formCard').style.display = 'block';
+      };
+
+      document.getElementById('customerForm').onsubmit = async (e) => {
+        e.preventDefault();
+        const formData = new FormData(e.target);
+        const data = Object.fromEntries(formData.entries());
+
+        try {
+          const res = await fetch('https://script.google.com/macros/s/YOUR_DEPLOYED_WEB_APP_ID/exec', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify(data)
+          });
+          const result = await res.json();
+          alert('✅ Request submitted successfully!');
+          e.target.reset();
+        } catch (err) {
+          alert('❌ Something went wrong. Please try again later.');
+        }
       };
     </script>
   </body>
