--- a/index.html
+++ b/index.html
@@ -56,16 +56,21 @@
 
       #landingPage {
         text-align: center;
-        color: white;
+        color: #fff;
         max-width: 420px;
         margin: auto;
         padding: 20px;
       }
 
+      #landingPage p {
+        font-size: 1.2em;
+        margin-top: 10px;
+      }
+
       #startButton {
         margin-top: 20px;
         padding: 12px 24px;
-        font-size: 16px;
+        font-size: 18px;
         font-weight: bold;
         background-color: #e84545;
         color: white;
@@ -82,8 +87,8 @@
   <body>
     <div id="landingPage">
       <h2>👋 Welcome to MV Digital Tools</h2>
-      <p>Helping students stay under the radar since 2023 🚀</p>
-      <button id="startButton">Let's Get Started</button>
+      <p>Are you ready to save up to 90% on Subscription services? 🚀</p>
+      <button id="startButton">Yes</button>
     </div>
 
     <div class="card" id="formCard">
