--- a/index.html
+++ b/index.html
@@ -1,281 +1,117 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <base target="_top">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-      body {
-        font-family: 'Segoe UI', sans-serif;
-        background-color: #0d1a26;
-        margin: 0;
-        padding: 20px;
-        display: flex;
-        justify-content: center;
-        align-items: start;
-        min-height: 100vh;
-        flex-direction: column;
-      }
+<div class="card" id="formCard">
+  <h2>📝 Subscription Request</h2>
+  <p>Fill the form to subscribe. You'll receive payment instructions via email.</p>
 
-      @media (max-width: 480px) {
-        body {
-          padding: 10px;
-        }
-        .card {
-          padding: 15px;
-          width: 100%;
-        }
-        input, select, textarea {
-          font-size: 16px;
-        }
-        .price-summary.sticky {
-          position: sticky;
-          bottom: 0;
-          left: 0;
-          right: 0;
-          z-index: 999;
-        }
-      }
+  <form id="customerForm">
+    <label>👤 Full Name</label>
+    <input type="text" name="name" required>
 
-      .card {
-        background-color: #ffffff;
-        color: #333;
-        border-radius: 12px;
-        padding: 20px 25px;
-        width: 100%;
-        max-width: 420px;
-        box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-        animation: fadeIn 0.5s ease;
-        margin: auto;
-        display: none;
-      }
+    <label>📞 Contact Number</label>
+    <input type="tel" name="contact" required>
 
-      @keyframes fadeIn {
-        from { opacity: 0; transform: translateY(10px); }
-        to { opacity: 1; transform: translateY(0); }
-      }
+    <label>📧 Email Address</label>
+    <input type="email" name="email" required>
 
-      #landingPage {
-        text-align: center;
-        color: #fff;
-        max-width: 420px;
-        margin: auto;
-        padding: 20px;
-      }
+    <label>🛠️ Request Type</label>
+    <select name="requestType" required>
+      <option value="new">New Subscription</option>
+      <option value="renew">Renew Existing</option>
+    </select>
 
-      #landingPage p {
-        font-size: 1.2em;
-        margin-top: 10px;
-      }
+    <label>🧩 Service</label>
+    <select name="service" id="service" required>
+      <option value="ChatGPT">ChatGPT Pro</option>
+      <option value="Microsoft 365">Microsoft 365</option>
+      <option value="Canva Pro">Canva Pro</option>
+      <option value="Duolingo">Duolingo</option>
+      <option value="Assignment Check">Assignment Check</option>
+      <option value="Perplexity">Perplexity Pro</option>
+      <option value="Amazon Prime Video">Amazon Prime Video</option>
+      <option value="Adobe Creative Cloud">Adobe Creative Cloud</option>
+    </select>
 
-      #startButton {
-        margin-top: 20px;
-        padding: 12px 24px;
-        font-size: 18px;
-        font-weight: bold;
-        background-color: #e84545;
-        color: white;
-        border: none;
-        border-radius: 8px;
-        cursor: pointer;
-      }
+    <label>⏳ Duration</label>
+    <select name="duration" id="duration" required>
+      <option>1 Month</option>
+      <option>6 Months</option>
+      <option>1 Year</option>
+    </select>
 
-      #startButton:hover {
-        background-color: #cc3c3c;
-      }
+    <label>🗒️ Notes / Ref</label>
+    <textarea name="notes" rows="3" placeholder="Optional..."></textarea>
 
-      #perkDisplay ul {
-        margin-top: 10px;
-        padding-left: 20px;
-      }
+    <input type="hidden" id="price" name="amount" required>
 
-      #perkDisplay ul li {
-        margin-bottom: 8px;
-      }
-
-      label {
-        font-weight: 600;
-        font-size: 0.85em;
-        display: block;
-        margin: 10px 0 4px;
-      }
-
-      input, select, textarea {
-        width: 100%;
-        padding: 10px 12px;
-        font-size: 14px;
-        border: 1px solid #ccc;
-        border-radius: 8px;
-        margin-bottom: 15px;
-        box-sizing: border-box;
-      }
-
-      button[type="submit"] {
-        background-color: #e84545;
-        border: none;
-        border-radius: 8px;
-        width: 100%;
-        padding: 12px;
-        font-size: 16px;
-        font-weight: bold;
-        color: white;
-        cursor: pointer;
-      }
-
-      button[type="submit"]:hover {
-        background-color: #cc3c3c;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="landingPage">
-      <h2>👋 Welcome to MV Digital Tools</h2>
-      <p>Are you ready to save up to 90% on Subscription services? 🚀</p>
-      <button id="startButton">Yes</button>
+    <div class="price-summary sticky" id="priceDisplay">
+      🛒 Total Price
+      <span>MVR 0 ($0.00)</span>
     </div>
 
-    <div class="card" id="formCard">
-      <h2>📝 Subscription Request</h2>
-      <p>Fill the form to subscribe. You'll receive payment instructions via email.</p>
+    <button type="submit">Submit</button>
+  </form>
+</div>
 
-      <form id="customerForm">
-        <label>👤 Full Name</label>
-        <input type="text" name="name" required>
+<script>
+  document.getElementById('startButton').onclick = () => {
+    document.getElementById('landingPage').style.display = 'none';
+    document.getElementById('formCard').style.display = 'block';
+  };
 
-        <label>📞 Contact Number</label>
-        <input type="tel" name="contact" required>
+  const priceMap = {
+    "ChatGPT": { "1 Month": 100, "6 Months": 600, "1 Year": 1200 },
+    "Microsoft 365": { "1 Year": 500, "1 Month": 70 },
+    "Canva Pro": { "1 Year": 150 },
+    "Duolingo": { "1 Year": 150 },
+    "Assignment Check": {
+      "Basic AI Detection": 50,
+      "AI Bypass": 100,
+      "AI Bypass Plus": 300
+    },
+    "Perplexity": { "1 Year": 200 },
+    "Amazon Prime Video": { "1 Year": 999 },
+    "Adobe Creative Cloud": { "1 Month": 450 }
+  };
 
-        <label>📧 Email Address</label>
-        <input type="email" name="email" required>
+  const serviceEl = document.getElementById('service');
+  const durationEl = document.getElementById('duration');
+  const priceInput = document.getElementById('price');
+  const priceDisplay = document.getElementById('priceDisplay').querySelector('span');
 
-        <label>🛠️ Request Type</label>
-        <select name="requestType" required>
-          <option value="new">New Subscription</option>
-          <option value="renew">Renew Existing</option>
-        </select>
+  function updatePrice() {
+    const service = serviceEl.value;
+    const duration = durationEl.value;
+    const price = priceMap[service]?.[duration];
 
-        <label>🧩 Service</label>
-        <select name="service" id="service" required>
-          <option value="ChatGPT">ChatGPT</option>
-          <option value="Microsoft 365">Microsoft 365</option>
-          <option value="Canva Pro">Canva Pro</option>
-          <option value="Duolingo">Duolingo</option>
-          <option value="Assignment Check">Assignment Check</option>
-          <option value="Perplexity">Perplexity</option>
-          <option value="Amazon Prime Video">Amazon Prime Video</option>
-          <option value="Adobe Creative Cloud">Adobe Creative Cloud</option>
-        </select>
+    if (price !== undefined) {
+      const usd = (price / 15.42).toFixed(2);
+      priceInput.value = `MVR ${price}`;
+      priceDisplay.textContent = `MVR ${price} ($${usd})`;
+    } else {
+      priceInput.value = "";
+      priceDisplay.textContent = "Unavailable";
+    }
+  }
 
-        <div id="perkDisplay">
-          <strong>What do you get:</strong>
-        </div>
+  serviceEl.onchange = updatePrice;
+  durationEl.onchange = updatePrice;
+  window.onload = updatePrice;
 
-        <label>⏳ Duration</label>
-        <select name="duration" required>
-          <option>1 Month</option>
-          <option>6 Months</option>
-          <option>1 Year</option>
-        </select>
+  document.getElementById('customerForm').onsubmit = async (e) => {
+    e.preventDefault();
+    const formData = new FormData(e.target);
+    const data = Object.fromEntries(formData.entries());
 
-        <label>🗒️ Notes / Ref</label>
-        <textarea name="notes" rows="3" placeholder="Optional..."></textarea>
-
-        <button type="submit">Submit</button>
-      </form>
-    </div>
-
-    <script>
-      const perksMap = {
-        "ChatGPT": [
-          "Priority access to GPT-4",
-          "Faster response times",
-          "Improved performance during peak hours"
-        ],
-        "Microsoft 365": [
-          "Full access to Word, Excel, PowerPoint",
-          "1TB OneDrive cloud storage",
-          "Outlook email & calendar",
-          "Install on up to 5 devices"
-        ],
-        "Canva Pro": [
-          "Unlimited premium templates & elements",
-          "Magic Resize and Background Remover",
-          "Brand Kit and content planner",
-          "Team collaboration features"
-        ],
-        "Duolingo": [
-          "No ads",
-          "Unlimited hearts (mistakes)",
-          "Personalized practice",
-          "Mastery quizzes and offline access"
-        ],
-        "Assignment Check": [
-          "Basic AI Detection - Basic detection on all major AI Detectors including Turnitin + MVR 15 per extra run",
-          "AI Bypass - Changes for 0% detection + MVR 25 per correction/run",
-          "AI Bypass Plus - All features + unlimited submissions"
-        ],
-        "Perplexity": [
-          "Faster and more accurate answers",
-          "Expanded answer formatting",
-          "Sources and citations in context",
-          "No daily usage limits"
-        ],
-        "Amazon Prime Video": [
-          "Unlimited streaming of movies and series",
-          "Exclusive Prime Originals",
-          "Watch on multiple devices",
-          "Offline downloads"
-        ],
-        "Adobe Creative Cloud": [
-          "Photoshop, Illustrator, Premiere Pro & more",
-          "100GB cloud storage",
-          "Fonts, stock assets, and portfolio tools",
-          "Cross-device app sync"
-        ]
-      };
-
-      function updatePerks() {
-        const service = document.getElementById('service').value;
-        const perks = perksMap[service] || [];
-        const container = document.getElementById('perkDisplay');
-        container.innerHTML = "<strong>What do you get:</strong>";
-        if (perks.length > 0) {
-          const ul = document.createElement("ul");
-          perks.forEach(p => {
-            const li = document.createElement("li");
-            li.textContent = p;
-            ul.appendChild(li);
-          });
-          container.appendChild(ul);
-        }
-      }
-
-      document.getElementById('startButton').onclick = () => {
-        document.getElementById('landingPage').style.display = 'none';
-        document.getElementById('formCard').style.display = 'block';
-        updatePerks();
-      };
-
-      document.getElementById('service').onchange = updatePerks;
-      window.onload = updatePerks;
-
-      document.getElementById('customerForm').onsubmit = async (e) => {
-        e.preventDefault();
-        const formData = new FormData(e.target);
-        const data = Object.fromEntries(formData.entries());
-
-        try {
-          const res = await fetch('https://script.google.com/macros/s/YOUR_DEPLOYED_WEB_APP_ID/exec', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify(data)
-          });
-          const result = await res.json();
-          alert('✅ Request submitted successfully!');
-          e.target.reset();
-        } catch (err) {
-          alert('❌ Something went wrong. Please try again later.');
-        }
-      };
-    </script>
-  </body>
-</html>
+    try {
+      const res = await fetch('https://script.google.com/macros/s/YOUR_DEPLOYED_WEB_APP_ID/exec', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(data)
+      });
+      const result = await res.json();
+      alert('✅ Request submitted successfully!');
+      e.target.reset();
+    } catch (err) {
+      alert('❌ Something went wrong. Please try again later.');
+    }
+  };
+</script>
