--- a/index.html
+++ b/index.html
@@ -1,65 +1,55 @@
-<!-- Final HTML code starts here -->
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <base target="_top">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>MV Digital Tools</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
       background-color: #0d1a26;
       margin: 0;
-      padding: 20px;
+      padding: 0;
+      color: #fff;
+    }
+
+    .container {
       display: flex;
-      justify-content: center;
-      align-items: start;
-      min-height: 100vh;
       flex-direction: column;
+      align-items: center;
+      max-width: 420px;
+      margin: auto;
+      padding: 20px;
     }
 
-    @media (max-width: 480px) {
-      body { padding: 10px; }
-      .card { padding: 15px; width: 100%; }
-      .price-summary.sticky {
-        position: sticky;
-        bottom: 0; left: 0; right: 0;
-        z-index: 999;
-      }
-    }
-
-    .card, .how-it-works {
-      background-color: #ffffff;
+    .card {
+      background: white;
       color: #333;
       border-radius: 12px;
-      padding: 20px 25px;
+      padding: 20px;
       width: 100%;
-      max-width: 420px;
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-      animation: fadeIn 0.5s ease;
-      margin: auto;
+      box-shadow: 0 0 15px rgba(0,0,0,0.15);
       display: none;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
+      animation: fadeIn 0.3s ease-in-out;
     }
 
     #landingPage {
       text-align: center;
-      color: #fff;
-      max-width: 420px;
-      margin: auto;
-      padding: 20px;
+      padding: 40px 20px;
+    }
+
+    #landingPage h2 {
+      font-size: 1.8em;
+      margin-bottom: 10px;
     }
 
     #landingPage p {
-      font-size: 1.2em;
-      margin-top: 10px;
+      font-size: 1.1em;
     }
 
-    #startButton, .continueButton, button[type="submit"] {
-      margin-top: 20px;
+    #startButton {
+      margin-top: 30px;
       padding: 12px 24px;
       font-size: 18px;
       font-weight: bold;
@@ -68,11 +58,74 @@
       border: none;
       border-radius: 8px;
       cursor: pointer;
-      width: 100%;
     }
 
-    button:hover {
+    #startButton:hover {
       background-color: #cc3c3c;
+    }
+
+    .how-it-works {
+      background: #fefaf3;
+      color: #333;
+      border-radius: 12px;
+      padding: 25px 20px;
+      margin: 20px auto;
+      max-width: 420px;
+      text-align: center;
+    }
+
+    .how-it-works h3 {
+      margin-bottom: 10px;
+      font-size: 1.5em;
+      color: #0d1a26;
+    }
+
+    .how-it-works p {
+      margin: 0.5em 0;
+      font-weight: 500;
+    }
+
+    .how-it-works span {
+      display: block;
+      margin-top: 5px;
+      font-size: 1.3em;
+      font-weight: bold;
+    }
+
+    .how-it-works a {
+      display: block;
+      margin-top: 15px;
+      color: #e84545;
+      font-weight: bold;
+      text-decoration: none;
+    }
+
+    label {
+      font-weight: bold;
+      display: block;
+      margin-top: 15px;
+      margin-bottom: 5px;
+    }
+
+    input, select, textarea {
+      width: 100%;
+      padding: 10px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      box-sizing: border-box;
+      margin-bottom: 10px;
+    }
+
+    button[type="submit"] {
+      width: 100%;
+      padding: 12px;
+      background-color: #e84545;
+      color: #fff;
+      font-weight: bold;
+      border: none;
+      border-radius: 8px;
+      margin-top: 15px;
+      cursor: pointer;
     }
 
     .price-summary {
@@ -80,107 +133,89 @@
       color: white;
       border-radius: 10px;
       padding: 16px;
-      margin: 20px 0;
       text-align: center;
       font-weight: bold;
       font-size: 18px;
+      margin: 20px 0 10px;
     }
 
     .price-summary span {
       display: block;
-      font-size: 26px;
+      font-size: 24px;
       margin-top: 5px;
       font-weight: 700;
     }
 
-    label {
-      font-weight: 600;
-      font-size: 0.85em;
-      display: block;
-      margin: 10px 0 4px;
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
-
-    input, select, textarea {
-      width: 100%;
-      padding: 10px 12px;
-      font-size: 14px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      margin-bottom: 15px;
-      box-sizing: border-box;
-    }
-
-    #perkDisplay ul { padding-left: 20px; }
-    #perkDisplay ul li { margin-bottom: 8px; }
   </style>
 </head>
 <body>
-  <div id="landingPage">
-    <h2>👋 Welcome to MV Digital Tools</h2>
-    <p>Are you ready to save up to 90% on Subscription services? 🚀</p>
-    <button id="startButton">Yes</button>
-  </div>
 
-  <div class="how-it-works" id="howItWorks">
-    <h2>🔍 How It Works</h2>
-    <ul>
-      <li>1. Select the service and duration you want</li>
-      <li>2. Submit the form with your details</li>
-      <li>3. Get payment instructions & complete payment</li>
-      <li>4. You'll be added within 24 hours to the shared subscription</li>
-    </ul>
-    <button class="continueButton" id="continueToForm">Continue</button>
-  </div>
+  <div class="container">
+    <div id="landingPage">
+      <h2>👋 Welcome to MV Digital Tools</h2>
+      <p>Are you ready to save up to 90% on Subscription services? 🚀</p>
+      <button id="startButton">Yes</button>
+    </div>
 
-  <div class="card" id="formCard">
-    <h2>📝 Subscription Request</h2>
-    <p>Fill the form to subscribe. You'll receive payment instructions via email.</p>
-    <form id="customerForm">
-      <label>👤 Full Name</label>
-      <input type="text" name="name" required>
+    <div class="how-it-works" id="howItWorks" style="display:none;">
+      <h3>Here's how it works:</h3>
+      <p>📝 Fill out the form</p>
+      <span>~ 2 minutes</span>
+      <p>📩 We'll email payment details</p>
+      <span>Within 15 mins</span>
+      <p>✅ Subscription activated</p>
+      <span>Same day</span>
+      <a href="tel:+9607566658">📞 Need help? Call 7566658</a>
+    </div>
 
-      <label>📞 Contact Number</label>
-      <input type="tel" name="contact" required>
+    <div class="card" id="formCard">
+      <h2>📝 Subscription Request</h2>
+      <form id="customerForm">
+        <label>👤 Full Name</label>
+        <input type="text" name="name" required>
 
-      <label>📧 Email Address</label>
-      <input type="email" name="email" required>
+        <label>📞 Contact Number</label>
+        <input type="tel" name="contact" required>
 
-      <label>🛠️ Request Type</label>
-      <select name="requestType" required>
-        <option value="new">New Subscription</option>
-        <option value="renew">Renew Existing</option>
-      </select>
+        <label>📧 Email Address</label>
+        <input type="email" name="email" required>
 
-      <label>🧩 Service</label>
-      <select name="service" id="service" required>
-        <option value="ChatGPT">ChatGPT Pro</option>
-        <option value="Microsoft 365">Microsoft 365</option>
-        <option value="Canva Pro">Canva Pro</option>
-        <option value="Duolingo">Duolingo</option>
-        <option value="Assignment Check">Assignment Check</option>
-        <option value="Perplexity">Perplexity Pro</option>
-        <option value="Amazon Prime Video">Amazon Prime Video</option>
-        <option value="Adobe Creative Cloud">Adobe Creative Cloud</option>
-      </select>
+        <label>🛠️ Request Type</label>
+        <select name="requestType" required>
+          <option value="new">New Subscription</option>
+          <option value="renew">Renew Existing</option>
+        </select>
 
-      <label>⏳ Duration</label>
-      <select name="duration" id="duration" required></select>
+        <label>🧩 Service</label>
+        <select name="service" id="service" required>
+          <option value="ChatGPT">ChatGPT Pro</option>
+          <option value="Microsoft 365">Microsoft 365</option>
+          <option value="Canva Pro">Canva Pro</option>
+          <option value="Duolingo">Duolingo</option>
+          <option value="Assignment Check">Assignment Check</option>
+          <option value="Perplexity">Perplexity Pro</option>
+          <option value="Amazon Prime Video">Amazon Prime Video</option>
+          <option value="Adobe Creative Cloud">Adobe Creative Cloud</option>
+        </select>
 
-      <div id="perkDisplay">
-        <strong>What do you get:</strong>
-      </div>
+        <label>⏳ Duration</label>
+        <select name="duration" id="duration" required></select>
 
-      <label>🗒️ Notes / Ref</label>
-      <textarea name="notes" rows="3" placeholder="Optional..."></textarea>
+        <div class="price-summary" id="priceDisplay">
+          🛒 Total Price
+          <span>MVR 0 ($0.00)</span>
+        </div>
 
-      <input type="hidden" id="price" name="amount" required>
-      <div class="price-summary sticky" id="priceDisplay">
-        🛒 Total Price
-        <span>MVR 0 ($0.00)</span>
-      </div>
+        <label>🗒️ Notes / Ref</label>
+        <textarea name="notes" rows="3" placeholder="Optional..."></textarea>
 
-      <button type="submit">Submit</button>
-    </form>
+        <button type="submit">Submit</button>
+      </form>
+    </div>
   </div>
 
   <script>
@@ -189,11 +224,7 @@
       "Microsoft 365": { "1 Year": 500 },
       "Canva Pro": { "1 Year": 150 },
       "Duolingo": { "1 Year": 150 },
-      "Assignment Check": {
-        "Basic AI Detection": 50,
-        "AI Bypass": 100,
-        "AI Bypass Plus": 300
-      },
+      "Assignment Check": { "Basic AI Detection": 50, "AI Bypass": 100, "AI Bypass Plus": 300 },
       "Perplexity": { "1 Year": 200 },
       "Amazon Prime Video": { "1 Year": 999 },
       "Adobe Creative Cloud": { "1 Month": 450 }
@@ -210,27 +241,11 @@
       "Adobe Creative Cloud": ["1 Month"]
     };
 
-    const perksMap = {
-      "ChatGPT Pro": ["Priority access to GPT-4", "Faster response times", "Improved performance during peak hours"],
-      "Microsoft 365": ["Full access to Word, Excel, PowerPoint", "1TB OneDrive cloud storage", "Outlook email & calendar", "Install on up to 5 devices"],
-      "Canva Pro": ["Unlimited premium templates & elements", "Magic Resize and Background Remover", "Brand Kit and content planner", "Team collaboration features"],
-      "Duolingo": ["No ads", "Unlimited hearts (mistakes)", "Personalized practice", "Mastery quizzes and offline access"],
-      "Adobe Creative Cloud": ["Photoshop, Illustrator, Premiere Pro & more", "100GB cloud storage", "Fonts, stock assets, and portfolio tools", "Cross-device app sync"],
-      "Amazon Prime Video": ["Unlimited streaming of movies and series", "Exclusive Prime Originals", "Watch on multiple devices", "Offline downloads"],
-      "Perplexity Pro": ["Faster and more accurate answers", "Expanded answer formatting", "Sources and citations in context", "No daily usage limits"],
-      "Assignment Check": [
-        "Basic AI Detection - Basic detection on all major AI Detectors including Turnitin + MVR 15 per extra run",
-        "AI Bypass - Changes for 0% detection + MVR 25 per correction/run",
-        "AI Bypass Plus - All features + unlimited submissions"
-      ]
-    };
+    const serviceEl = document.getElementById('service');
+    const durationEl = document.getElementById('duration');
+    const priceDisplay = document.getElementById('priceDisplay').querySelector('span');
 
-    const serviceEl = document.getElementById("service");
-    const durationEl = document.getElementById("duration");
-    const priceInput = document.getElementById("price");
-    const priceDisplay = document.getElementById("priceDisplay").querySelector("span");
-
-    function updateDurationOptions() {
+    function updateDurations() {
       const service = serviceEl.value;
       durationEl.innerHTML = "";
       (durationOptions[service] || []).forEach(d => {
@@ -239,58 +254,41 @@
         opt.textContent = d;
         durationEl.appendChild(opt);
       });
-      updatePrice(); updatePerks();
-    }
-
-    function updatePerks() {
-      const service = serviceEl.value;
-      const label = service === "ChatGPT" ? "ChatGPT Pro" : service === "Perplexity" ? "Perplexity Pro" : service;
-      const perks = perksMap[label] || [];
-      const container = document.getElementById("perkDisplay");
-      container.innerHTML = "<strong>What do you get:</strong>";
-      const ul = document.createElement("ul");
-      perks.forEach(p => {
-        const li = document.createElement("li");
-        li.textContent = p;
-        ul.appendChild(li);
-      });
-      container.appendChild(ul);
+      updatePrice();
     }
 
     function updatePrice() {
       const service = serviceEl.value;
       const duration = durationEl.value;
       const price = priceMap[service]?.[duration];
-      if (price !== undefined) {
-        priceInput.value = `MVR ${price}`;
-        priceDisplay.textContent = `MVR ${price} ($${(price / 15.42).toFixed(2)})`;
+      if (price) {
+        const usd = (price / 15.42).toFixed(2);
+        priceDisplay.textContent = `MVR ${price} ($${usd})`;
       } else {
-        priceInput.value = "";
         priceDisplay.textContent = "Unavailable";
       }
     }
 
-    serviceEl.onchange = updateDurationOptions;
-    durationEl.onchange = () => { updatePrice(); updatePerks(); };
+    serviceEl.onchange = updateDurations;
+    durationEl.onchange = updatePrice;
 
-    document.getElementById("startButton").onclick = () => {
-      document.getElementById("landingPage").style.display = "none";
-      document.getElementById("howItWorks").style.display = "block";
+    window.onload = () => {
+      updateDurations();
     };
 
-    document.getElementById("continueToForm").onclick = () => {
-      document.getElementById("howItWorks").style.display = "none";
-      document.getElementById("formCard").style.display = "block";
-      updateDurationOptions();
+    document.getElementById('startButton').onclick = () => {
+      document.getElementById('landingPage').style.display = 'none';
+      document.getElementById('howItWorks').style.display = 'block';
+      document.getElementById('formCard').style.display = 'block';
     };
 
-    document.getElementById("customerForm").onsubmit = function(e) {
+    document.getElementById('customerForm').onsubmit = function (e) {
       e.preventDefault();
+      const data = Object.fromEntries(new FormData(this).entries());
       alert("✅ Your request has been submitted.\n\n💳 Please transfer the payment to:\n🏦 BML: 7704519614002\n👤 Usaid Abdul Sattar\n\n📨 Send the transfer slip to: Viber 7566658");
       this.reset();
-      updateDurationOptions();
+      updateDurations();
     };
   </script>
 </body>
 </html>
-<!-- Final HTML code ends here -->
